# LAW

./: .gitignore  CaseDetail.jsx  CaseLandingPage.jsx  CaseProfileApp.jsx  CaseProfileCreator.jsx  README.md  index.html  jest.config.js  jest.setup.js  main.jsx  package.json
.github/: pull_request_template.md
__tests__/: CaseDetail.test.jsx  CaseLandingPage.test.jsx  CaseProfileCreator.test.jsx
backend/: messages.js  tasks.js
case-intel-tools/: README.md
case_control_system/: CASE_CONTROL_SKILL.md  README.md  app.py  hub_publish_notes.md
client/: index.html
components/: CaseDetail.jsx  CaseLandingPage.jsx  CaseProfileCreator.jsx
docs/: AI_NEW_FINDING_LIFECYCLE.md  AI_SEARCH_INTEGRATION.md  CONNECTOR_COMMUNICATION_PROTOCOL.md  DRIVE_SYNC_SCHEMA.md  EXACT_RETRIEVAL_AND_INVALIDATION.md  FIRST_PERSON_RECOLLECTION_LEARNING.md  LIVING_PROOF_DEBT_RESOLVER.md  NATIVE_ACCOUNTING_RECONCILIATION_ENGINE.md
evidence-build/: README.md  requirements.txt
hooks/: useCaseStorage.js
huggingface/: README.md
mfese-engine/: .gitignore  README.md  app.py  deploy_to_hf.py  pyproject.toml  requirements.txt
mfese-engine/configs/: default.yaml
mfese-engine/src/mfese/: __init__.py  cli.py  engine.py  extract.py  fusion.py  graph.py  hf_router.py  schemas.py  skills.py
mfese-engine/tests/: test_engine.py  test_extract.py  test_fusion.py
mfese-engine/tools/: export_schemas.py
schemas/: connector-envelope.schema.json
scripts/: fraud_clarity_router.py
server/: accountingReconciliation.js  accountingReconciliation.test.js  accountingRoutes.js  accountingSchema.js  (+22 more)
(+101 files in other folders)
